--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pkgconfig>=1.5.5",
     "cmake>=4.1.0",
     "manim>=0.19.0",
+    "tinker>=0.4.1",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
