--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "cmake>=4.1.0",
     "tinker>=0.4.1",
     "hf-transfer>=0.1.9",
+    "transformers>=4.40.0",
+    "peft>=0.10.0",
+    "accelerate>=0.30.0",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
